# CLI-Bench

./: .gitignore  CITATION.cff  README.md  pyproject.toml
cli_bench/: __init__.py
cli_bench/agents/: anthropic_agent.py  base.py  dummy.py  openai_agent.py
cli_bench/harness/: benchmark.py  evaluator.py  runner.py
cli_bench/mock_backends/: base.py  fictional.py  github.py  google.py  jira.py  linear.py  notion.py  opencli.py  slack.py
cli_bench/models/: __init__.py  scoring.py  task.py  tool_adapter.py
cli_bench/tool_adapters/: opencli.yaml
data/: metadata.yaml  tasks.jsonl
data/tasks/: cb-001.yaml  cb-002.yaml  cb-003.yaml  cb-004.yaml  cb-005.yaml  cb-006.yaml  cb-007.yaml  cb-008.yaml  cb-009.yaml  cb-010.yaml  cb-011.yaml  cb-012.yaml  cb-013.yaml  cb-014.yaml  cb-015.yaml  cb-016.yaml  cb-017.yaml  cb-018.yaml  cb-019.yaml  cb-020.yaml  cb-021.yaml  cb-022.yaml  cb-023.yaml  cb-024.yaml  cb-025.yaml  cb-026.yaml  cb-027.yaml  cb-028.yaml  cb-029.yaml  cb-030.yaml  cb-031.yaml  cb-032.yaml  cb-033.yaml  cb-034.yaml  cb-035.yaml  cb-036.yaml  cb-037.yaml  cb-038.yaml  cb-039.yaml  cb-040.yaml  (+20 more)
docs/: CONTRIBUTING.md
docs/plans/: 2026-03-17-opencli-integration-design.md  2026-03-17-opencli-integration.md
paper/: main.bbl  main.tex
scripts/: run_benchmark.py  upload_to_hf.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_agents.py  test_benchmark.py  test_evaluator.py  test_exploration.py  test_exploration_integration.py  test_fictional_backend.py  test_mock_backend_base.py  test_mock_github.py  test_mock_google.py  test_models.py  (+10 more)
